使用marker进行分类，尝试按类组织，尝试tmp_path fixture

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,9 @@
 [pytest]
+
 testpaths = ./tests
+
+markers =
+    learning: test case for learning pytest
+    mycustom: my custom test marker
+
+addopts =
