--- a/pytest.ini
+++ b/pytest.ini
@@ -4,6 +4,8 @@ testpaths = ./tests
 
 markers =
     learning: test case for learning pytest
-    mycustom: my custom test marker
 
 addopts =
+
+# unicode 停止转义
+disable_test_id_escaping_and_forfeit_all_rights_to_community_support = True
