开始测试免费api

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,8 +4,9 @@ testpaths = ./tests
 
 markers =
     learning: test case for learning pytest
+    freeapi: test case to test some free api
 
-addopts =
+addopts = -m 'not learning'
 
 # unicode 停止转义
 disable_test_id_escaping_and_forfeit_all_rights_to_community_support = True
