--- a/pytest.ini
+++ b/pytest.ini
@@ -6,7 +6,7 @@ markers =
     learning: test case for learning pytest
     freeapi: test case to test some free api
 
-addopts = -m 'not learning'
+addopts = -vs -m 'not learning' --alluredir ./reports --clean-alluredir
 
 # unicode 停止转义
 disable_test_id_escaping_and_forfeit_all_rights_to_community_support = True
