--- a/pytest.ini
+++ b/pytest.ini
@@ -8,5 +8,5 @@ markers =
 
 addopts = -vs -m 'not learning' --alluredir ./reports --clean-alluredir
 
-# unicode 停止转义
+# stop unicode escape
 disable_test_id_escaping_and_forfeit_all_rights_to_community_support = True
