--- a/pytest.ini
+++ b/pytest.ini
@@ -5,6 +5,7 @@ testpaths = ./tests
 markers =
     learning: test case for learning pytest
     freeapi: test case to test some free api
+    ruoyi: test case to test ruoyi
 
 addopts = -vs -m 'not learning' --alluredir ./reports --clean-alluredir
 
